--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "classlist.js": "^1.1.20150312",
     "cors": "^2.8.5",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -36,21 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/diasayusavitri/Project_UAS.git"
-  },
-  "keywords": [
-    "jsx"
-  ],
-  "author": "Dias Ayu Savitri",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/diasayusavitri/Project_UAS/issues"
-  },
-  "homepage": "https://github.com/diasayusavitri/Project_UAS#readme"
+  }
 }
